[gd_scene load_steps=7 format=3 uid="uid://d1n5d3w0ntk22"]

[ext_resource type="Script" path="res://ui/options_menu/options_menu.gd" id="1_xyouh"]
[ext_resource type="Resource" uid="uid://35np0u1xed7a" path="res://Graph/Algorithms/BFS.tres" id="2_mhvid"]
[ext_resource type="Texture2D" uid="uid://bj1nx53ium04c" path="res://hexels/optionsmenu.png" id="3_8jlu4"]
[ext_resource type="Theme" uid="uid://ds50bdi3l4kfk" path="res://ui/default_theme.tres" id="4_4nafr"]
[ext_resource type="Resource" uid="uid://bvslibhoqmpps" path="res://Graph/Algorithms/DFS.tres" id="4_hp3e5"]
[ext_resource type="Script" path="res://ui/options_menu/colour_rect_picker.gd" id="6_x4k7g"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme = ExtResource("4_4nafr")
script = ExtResource("1_xyouh")
algorithms = Array[Resource("res://Graph/Algorithms/algorithm.gd")]([ExtResource("2_mhvid"), ExtResource("4_hp3e5")])

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -190.0
offset_bottom = 200.0
grow_horizontal = 0
texture = ExtResource("3_8jlu4")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.28
offset_top = 3.915
offset_right = -4.28
offset_bottom = 167.915
grow_horizontal = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="lblNeutralColour" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Neutral
"

[node name="crRectNeutral" type="ColorRect" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.87451, 0.784314, 0.74902, 1)

[node name="lblCurrentColour" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Current
"

[node name="crRectCurrent" type="ColorRect" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.41, 0.41, 0.41, 1)

[node name="lblBoundaryColour" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Boundary"

[node name="crRectBoundary" type="ColorRect" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.113725, 0.329412, 0.160784, 1)

[node name="lblExploredColour" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Explored"

[node name="crRectExplored" type="ColorRect" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
color = Color(0.372367, 0.589766, 0.714024, 1)

[node name="AlgorithmOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
fit_to_longest_item = false
allow_reselect = true
popup/item_0/text = "TEST"
popup/item_0/id = 0

[node name="ColourPicker" type="ColorPicker" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -632.0
offset_top = 2.0
offset_right = -334.0
offset_bottom = 648.0
grow_horizontal = 0
edit_alpha = false
deferred_mode = true
sampler_visible = false
color_modes_visible = false
hex_visible = false
presets_visible = false
script = ExtResource("6_x4k7g")
